@@ -1,5 +1,10 @@
 # $Id$
 
+2006-07-08	Konstantin V. Arkhipov
+
+	* ext/src/main/DAOs/Handlers/SharedMemorySegmentHandler.c: implemented
+	finally.
+
 2006-07-07	Konstantin V. Arkhipov
 
 	* core/Form/FormUtils.class.php: null's handling are now optional, as
